--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -1,17 +1,17 @@
-name: Run Gosec
-on:
-  push:
-    branches:
-      - master
-jobs:
-  tests:
-    runs-on: ubuntu-latest
-    env:
-      GO111MODULE: on
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v2
-      - name: Run Gosec Security Scanner
-        uses: securego/gosec@master
-        with:
-          args: ./...
+# name: Run Gosec
+# on:
+#   push:
+#     branches:
+#       - master
+# jobs:
+#   tests:
+#     runs-on: ubuntu-latest
+#     env:
+#       GO111MODULE: on
+#     steps:
+#       - name: Checkout Source
+#         uses: actions/checkout@v2
+#       - name: Run Gosec Security Scanner
+#         uses: securego/gosec@master
+#         with:
+#           args: ./...
